--- a/section_Acknowledgements_We_thank_the__.tex
+++ b/section_Acknowledgements_We_thank_the__.tex
@@ -1,3 +1,6 @@
 \section{Acknowledgements}
 
-We thank the study participants and MR technicians. Funding was provided by R01 NS049477.
+We thank the study participants, MR technicians, and acknowledge Stephane Lehéricy, Eric Bardinet, Frédéric Humbert and
+Antoine Burgos from the ICM IRM facility (CENIR) and the CIC
+Pitié-Salpêtrière for their expertise. Funding was provided by R01 NS049477, ICM F-75013 Paris, INSERM and IHU-A-ICM
+(ANR-10-IAIHU-06).
