--- a/authors.tex
+++ b/authors.tex
@@ -14,7 +14,9 @@ Jason Crane\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Sandra D’Alfonso\footnote[6]{Eastern Piedmont University, Novara, Italy},
 Benedicte Dubois\footnote[7]{KU Leuven, Leuven, Belgium}
 Massimo Filippi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
-Bertrand Fontaine\footnote[9]{Hôpital Pitié-Salpêtrière, Paris, France}
+Bertrand Fontaine\footnote[9]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
+Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013  
+Paris, France.}
 Ann Goris\footnote[7]{KU Leuven, Leuven, Belgium}
 Laura Gaetano\footnote[13]{University Hospital, Basel, Switzerland},
 Sergiu Groppa\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
@@ -32,7 +34,9 @@ Xavier Montalban\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spai
 Mark Muhlau\footnote[12]{Technische Universität München, Munich, Germany}
 Daniel Pelletier\footnote[11]{Yale University, CT, United States}
 Margaret Pericak-Vance\footnote[15]{University of Miami, Miami, USA}
-Isabelle Rebeix\footnote[9]{Hôpital Pitié-Salpêtrière, Paris, France}
+Isabelle Rebeix\footnote[9]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
+Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013  
+Paris, France.}
 Maria Rocca\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Alex Rovira\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
 Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
