--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -5,6 +5,8 @@
 \toprule
 {} &     1  &     2  &     3  &     4  &                    5  &     6  &                    7  &     8  &     9  &     10 \\
 \midrule
+Location & ams & bas & bas & bas & bcn & ber & bwh & bwh & hvn & leu\\
+\midrule
 TR                            &      8 &   2080 &   2300 &   2300 &                  1800 &   1900 &                     8 &   2300 &   2000 &      8 \\
 TE                            &    3.2 &    3.1 &      3 &      3 &                     3 &      3 &                   3.9 &      3 &    3.2 &    3.8 \\
 Strength                      &      3 &    1.5 &      3 &      3 &                     3 &      3 &                   1.5 &      3 &      3 &      3 \\
@@ -12,6 +14,7 @@ TI                            &    450 &   1100 &    900 &    900 &             
 FlipAngle                     &     12 &     15 &      9 &      9 &                     9 &      9 &                    20 &      9 &      8 &      8 \\
 Make                          &     GE &     Si &     Si &     Si &                    Si &     Si &                    GE &     Si &     Si &     Ph \\
 Voxel Size                    &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  .86x0.86x0.86 &  1x1x1 &  0.94x0.94x1.2 &  1x1x1 &  1x1x1 &  1x1x1 \\
+\midrule
 Lateral-Ventricle             &      1 &   0.79 &      1 &      1 &                     1 &      1 &                     1 &      1 &      1 &      1 \\
 cWMV        &      1 &   0.98 &      1 &      1 &                     1 &   0.99 &                  0.99 &      1 &   0.97 &      1 \\
 cVol                   &   0.99 &   0.95 &   0.99 &   0.99 &                     1 &   0.96 &                  0.95 &      1 &   0.96 &   0.99 \\
