--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -14,7 +14,7 @@ TI                            &    450 &   1100 &    900 &    900 &             
 FlipAngle                     &     12 &     15 &      9 &      9 &                     9 &      9 &                    20 &      9 &      8 &      8 \\
 Make                          &     GE &     Si &     Si &     Si &                    Si &     Si &                    GE &     Si &     Si &     Ph \\
 Voxel Size                    &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  .86x.86x.86 &  1x1x1 &  .94x.94x1.2 &  1x1x1 &  1x1x1 &  1x1x1 \\
-\midrule
+\bottomrule
 Lateral-Ventricle             &      1 &   0.79 &      1 &      1 &                     1 &      1 &                     1 &      1 &      1 &      1 \\
 cWMV        &      1 &   0.98 &      1 &      1 &                     1 &   0.99 &                  0.99 &      1 &   0.97 &      1 \\
 cVol                   &   0.99 &   0.95 &   0.99 &   0.99 &                     1 &   0.96 &                  0.95 &      1 &   0.96 &   0.99 \\
