--- a/authors.tex
+++ b/authors.tex
@@ -44,7 +44,7 @@ Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland},
 Alessandro Stecco\footnote[6]{Eastern Piedmont University, Novara, Italy},
 Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
 Pablo Villoslada\footnote[14]{IDIBAPS, Barcelona, Spain},
-Mike Wattjies\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
+Mike Wattjes\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
 Howard Weiner\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Jens Wurfel\footnote[2]{Charite Universitatsmedizin, Germany},
 Frauke Zipp\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany},
