--- a/authors.tex
+++ b/authors.tex
@@ -96,7 +96,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[6]{Alessandro Stecco}
 \author[16]{Bernard Uitdehaag}
 \author[14]{Pablo Villoslada}
-\author[13]{Mike Wattjies}
+\author[13]{Mike Wattjes}
 \author[4]{Howard Weiner}
 \author[2]{Jens Wurfel}
 \author[10]{Frauke Zipp}
