--- a/authors.tex
+++ b/authors.tex
@@ -1,7 +1,7 @@
 \iflatexml
 Anisha Keshavan\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Friedmann Paul\footnote[2]{Charite Universitatsmedizin, Germany},
-Mona Beyer\footnote[3]{Oslo University Hospital, Norway},
+Mona Beyer\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
 Alyssa Zhu\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Nico Papinutto\footnote[1]{Neurology, UCSF, San Francisco, CA},
 William Stern\footnote[1]{Neurology, UCSF, San Francisco, CA},
@@ -21,7 +21,7 @@ Ann Goris\footnote[7]{KU Leuven, Leuven, Belgium}
 Laura Gaetano\footnote[13]{University Hospital, Basel, Switzerland},
 Sergiu Groppa\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
 David Hafler\footnote[11]{Yale University, CT, United States}
-Hanne Harbo\footnote[3]{Oslo University Hospital, Norway},
+Hanne F. Harbo\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
 Bernhard Hemmer\footnote[12]{Technische Universität München, Munich, Germany}
 Kesshi Jordan\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Ludwig Kappos\footnote[13]{University Hospital, Basel, Switzerland}
@@ -75,7 +75,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[13]{Laura Gaetano}
 \author[10]{Sergiu Groppa}
 \author[11]{David Hafler}
-\author[3]{Hanne Harbo}
+\author[3]{Hanne F. Harbo}
 \author[12]{Bernhard Hemmer}
 \author[1]{Kesshi Jordan}
 \author[13]{Ludwig Kappos}
@@ -108,7 +108,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 
 \affil[1]{Neurology, UCSF, San Francisco, CA} 
 \affil[2]{Charite Universitatsmedizin, Germany}
-\affil[3]{Oslo University Hospital, Norway}
+\affil[3]{Department of Neurology, Oslo University Hospital and University of Oslo}
 \affil[4]{Brigham and Women's Hospital, MA, United States}
 \affil[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
 \affil[6]{Eastern Piedmont University, Novara, Italy}
