latest table w/ 20 sites

--- a/tab_cva.tex
+++ b/tab_cva.tex
@@ -1,17 +1,16 @@
 \begin{table}
 []
 \centering
-
 \begin{tabular}{lr}
 \toprule
-{} &   $CV_{\alpha}$ \\
+{} &   CVa \\
 \midrule
 Lateral-Ventricle             &  0.03 \\
 CorticalWhiteMatterVol        &  0.02 \\
 CortexVol                     &  0.04 \\
 SubCortGrayVol                &  0.02 \\
-TotalGrayVol                  &  0.03 \\
-EstimatedTotalIntraCranialVol &  0.06 \\
+TotalGrayVol                  &  0.04 \\
+EstimatedTotalIntraCranialVol &  0.08 \\
 Caudate                       &  0.04 \\
 Amygdala                      &  0.07 \\
 Hippocampus                   &  0.03 \\
