--- a/figures/cva_J/caption.tex
+++ b/figures/cva_J/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:cv_j} Shows power curves for 80\% power for 2175 - 3000 total subjects. The lowest point of each curves shows the minimum number of sites required for a set number of subjects on the x-axis and the y axis corresponds to the maximum acceptable coefficient of variability ($CV_{\alpha}$, defined in \ref{eq:cvadef}) for that case. On the right-hand side, the distribution of $CV_{\alpha}$ values across all sites and all Freesurfer ROIs. In general, all the $CV_{\alpha}$ fall below 10\%. This means that for the curves where the total number of subjects is less than 2300, ROIs must be carefully chosen and calibrated to 
+\label{fig:cv_j} Shows power curves for 80\% power for 2260 - 3000 total subjects, where power is set at 80\%, the false positive rate is 0.002, and the effect size is 0.19. The lowest point of each curves shows the minimum number of sites required for a given number of subjects on the x-axis and the y axis corresponds to the maximum acceptable coefficient of variability ($CV_{\alpha}$, defined in \ref{eq:cvadef}) for that case. On the right-hand side, the distribution of $CV_{\alpha}$ values across all sites and all Freesurfer ROIs. In general, when minimizing the total number of sites for a set number of subjects, the maximum allowable $CV_{\alpha}$ is around 5\%, meaning that if the $CV_{\alpha}$ is higher that 5\% for a particular ROI, the power of the model will fall below 80\%.
