--- a/authors.tex
+++ b/authors.tex
@@ -9,6 +9,7 @@ William Stern\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Michael Amann\footnote[13]{University Hospital, Basel, Switzerland},
 Rohit Bakshi\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Antje Bischof\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Alessandro Carriero\footnote[1]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy},
 Manuel Comabella\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
 Jason Crane\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Sandra D’Alfonso\footnote[6]{Eastern Piedmont University, Novara, Italy},
@@ -41,7 +42,7 @@ Maria Rocca\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Alex Rovira\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
 Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland},
-Alessandro Stecco\footnote[6]{Eastern Piedmont University, Novara, Italy},
+Alessandro Stecco\footnote[6]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100},
 Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
 Pablo Villoslada\footnote[14]{IDIBAPS, Barcelona, Spain},
 Mike Wattjes\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
