--- a/tab_cva.tex
+++ b/tab_cva.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{lr}
 \toprule
-{} &   CVa \\
+{} &   $CV_{\alpha}$ \\
 \midrule
 Lateral-Ventricle             &  0.03 \\
 CorticalWhiteMatterVol        &  0.02 \\
