--- a/authors.tex
+++ b/authors.tex
@@ -1,7 +1,7 @@
 \iflatexml
 Anisha Keshavan\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Friedmann Paul\footnote[2]{Charite Universitatsmedizin, Germany},
-Mona Beyer\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
+Mona K. Beyer\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
 Alyssa Zhu\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Nico Papinutto\footnote[1]{Neurology, UCSF, San Francisco, CA},
 William Stern\footnote[1]{Neurology, UCSF, San Francisco, CA},
@@ -58,7 +58,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \else % PDF export commands go here
 \author[1]{Anisha Keshavan}
 \author[2]{Friedmann Paul}
-\author[3]{Mona Beyer}
+\author[3]{Mona K. Beyer}
 \author[1]{Alyssa Zhu}
 \author[1]{Nico Papinutto}
 \author[1]{William Stern}
@@ -66,6 +66,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[13]{Michael Aman}
 \author[4]{Rohit Bakshi}
 \author[1]{Antje Bischof}
+\author[6] {Alessandro Carriero}
 \author[5]{Manuel Comabella}
 \author[1]{Jason Crane}
 \author[6]{Sandra D’Alfonso}
