--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -27,7 +27,7 @@ Hippocampus                   &   0.98 &   0.99 &   0.68 &   0.94 &   0.96 &   0
 Thalamus-Proper               &    0.9 &   0.96 &   0.88 &   0.99 &   0.88 &   0.84 &   0.94 &    0.9 &   0.58 &   0.62 \\
 \bottomrule
 \end{tabular}
-\caption{Top: Acquisition parameters for 9 of the 19 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. Location abbreviations are: mia = Miami, USA, mil = Milan, Italy, mnz = Mainz, Germany, mun = Munich, Germany, nov = Novara, Italy, osl = Oslo, Norway, par = Paris, France, sf = San Francisco, USA, vdb = Barcelona, Spain} 
+\caption{Top: Acquisition parameters for the last 10 of the 20 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. Location abbreviations are: mia = Miami, USA, mil = Milan, Italy, mnz = Mainz, Germany, mun = Munich, Germany, nov = Novara, Italy, osl = Oslo, Norway, par = Paris, France, sf = San Francisco, USA, vdb = Barcelona, Spain} 
 \label{tab:acquisition2}
 
 \end{table}
