--- a/beginequation_Y_ij__.tex
+++ b/beginequation_Y_ij__.tex
@@ -1,3 +1,3 @@
 \begin{equation}
-Y_{i,j} = \beta_{0j} + \beta_{1j}X_{i,j} + \beta_{2,j}Z_{i,j} + r_{i,j}
+Y_{i,j} = \beta_{0j} + \beta_{1,j}X_{i,j} + \beta_{2,j}Z_{i,j} + r_{i,j}
 \end{equation}
