--- a/beginequation_scGMV_1.tex
+++ b/beginequation_scGMV_1.tex
@@ -1,3 +1,3 @@
 \begin{equation}
-scGMV \sim 1 + X_{Group} + Z_{Age} + Z_{Gender} + (1|site)
+scGMV \sim 1 + X_{Group} + Z_{Age} + Z_{Gender} + (1\; |\; site)
 \end{equation}
