--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -4,8 +4,8 @@
 \begin{tabular}{lllllllllll}
 \toprule
 {} &     1  &     2  &     3  &     4  &                    5  &     6  &                    7  &     8  &     9  &     10 \\
-\midrule
-Location & ams & bas & bas & bas & bcn & ber & bwh & bwh & hvn & leu\\
+%\midrule
+%Location & ams & bas & bas & bas & bcn & ber & bwh & bwh & hvn & leu\\
 \midrule
 TR                            &      8 &   2080 &   2300 &   2300 &                  1800 &   1900 &                     8 &   2300 &   2000 &      8 \\
 TE                            &    3.2 &    3.1 &      3 &      3 &                     3 &      3 &                   3.9 &      3 &    3.2 &    3.8 \\
