--- a/To_our_knowledge_thi.tex
+++ b/To_our_knowledge_thi.tex
@@ -1,1 +1,1 @@
-To our knowledge, this is the first report measuring scaling factors between sites with non-standardized protocols using a single set of subjects, and deriving an equation for power that takes this scaling into account via mixed modeling. However, this study is limited to powering cross-sectional designs. Jones and colleagues have derived sample size calculations for longitudinal studies acquired under heterogeneous conditions without the use of calibration subjects \cite{jones2013quantification}. This can be extremely useful for studies measuring longitudinal atrophy over long time-periods, during which scanners and protocols may change. For the cross sectional case, the use of random effects modelling enables us to generalize our results to any protocol with acquisition parameters similar to those described here. If protocols change drastically compared to our sample of scanners and protocols, healthy controls should be scanned before and after any major software, hardware, or protocol changes, and scaling factors should be compared to the rest of the scanners.
+To our knowledge, this is the first report measuring scaling factors between sites with non-standardized protocols using a single set of subjects, and deriving an equation for power that takes this scaling into account via mixed modeling. However, this study is limited to powering cross-sectional designs. Jones and colleagues have derived sample size calculations for longitudinal studies acquired under heterogeneous conditions without the use of calibration subjects \cite{jones2013quantification}. This can be extremely useful for studies measuring longitudinal atrophy over long time-periods, during which scanners and protocols may change. For the cross-sectional case, the use of random effects modeling enables us to generalize our results to any protocol with acquisition parameters similar to those described here. If protocols change drastically compared to our sample of scanners and protocols, healthy controls should be scanned before and after any major software, hardware, or protocol changes, and scaling factors should be compared to the rest of the scanners.
