--- a/When_planning_a_mult.tex
+++ b/When_planning_a_mult.tex
@@ -1,1 +1,1 @@
-When planning a multisite study, there is an emphasis on acquiring data from more sites because the estimated effect sizes from each site are sampled from a distribution and averaged. Understanding how much of the variance in the distribution is due to scanner noise as opposed to population heterogeneity is an important part of powering a study. For the purposes of this study, we estimated the effect size variability of Freesurfer-derived regional volumes, but this framework could be generalized to any T1-weighted segmentation algorithm, and any modality for which systematic errors are scaled. Direct calibration of metrics is possible to achieve with just 12 calibration subjects and results in higher absolute agreement of metrics between sites.
+When planning a multisite study, there is an emphasis on acquiring data from more sites because the estimated effect sizes from each site are sampled from a distribution and averaged. Understanding how much of the variance in the distribution is due to scanner noise as opposed to population heterogeneity is an important part of powering a study. For the purposes of this study, we estimated the effect size variability of Freesurfer-derived regional volumes, but this framework could be generalized to any T1-weighted segmentation algorithm, and any modality for which systematic errors are scaled. Direct calibration of metrics is possible to achieve with just 12 calibration subjects and results in higher absolute agreement of metrics between sites. However, calibration is only necessary when there are not a sufficient number of subjects at each site, or if there are not a sufficient number of sites. The equation for power we outlined in this study along with our measurements of variability between sites should help researchers plan the subject and site level sample sizes along with the choice of outcome metrics. %generalize message to everyone
