--- a/figures/cva_J/caption.tex
+++ b/figures/cva_J/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:cv_j} Shows power curves for 80\% power for 2260 - 3000 total subjects, where power is set at 80\%, the false positive rate is 0.002, and the effect size is 0.19. The lowest point of each curves shows the minimum number of sites required for a given number of subjects on the x-axis and the y axis corresponds to the maximum acceptable coefficient of variability ($CV_{\alpha}$, defined in \ref{eq:cvadef}) for that case. On the right-hand side, the distribution of $CV_{\alpha}$ values across all sites and all Freesurfer ROIs. In general, when minimizing the total number of sites for a set number of subjects, the maximum allowable $CV_{\alpha}$ is around 5\%, meaning that if the $CV_{\alpha}$ is higher that 5\% for a particular ROI, the power of the model will fall below 80\%.
+\label{fig:cv_j} Shows power curves for 80\% power for 2260 - 3000 total subjects, where power is set at 80\%, the false positive rate is 0.002, and the effect size is 0.19. The lowest point of each curves shows the minimum number of sites required for a given number of subjects on the x-axis and the y axis corresponds to the maximum acceptable coefficient of variability ($CV_{\alpha}$, defined in \ref{eq:cvadef}) for that case. On the right-hand side, the distribution of $CV_{\alpha}$ values across all sites and all Freesurfer ROIs. In general, when minimizing the total number of sites for a set number of subjects, the maximum allowable $CV_{\alpha}$ is around 5\%, meaning that if the $CV_{\alpha}$ is higher that 5\% for a particular ROI, the power of the model will fall below 80\%. The shaded section on the bottom of the graph called the "Calibration Zone" indicates the regions of the graph where the maximum $CV_{\alpha}$ is below the largest $CV_{\alpha}$ across all freesurfer ROIs (7.7\%). If site- and subject- level sample sizes fall within this region, at least 1 ROI would need to be calibrated.
