--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -27,7 +27,7 @@ Hipp                   &   0.83 &   0.87 &   0.95 &   0.98 &                  0.
 Thal               &   0.93 &   0.87 &   0.93 &   0.92 &                  0.87 &   0.87 &                  0.87 &   0.95 &   0.95 &   0.93 \\
 \bottomrule
 \end{tabular}
-\caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. Location abbreviations: ams = Amsterdam, Netherlands, bas = Basel, Switzerland, bcn = Barcelona, Spain, ber= Berlin, Germany, bwh = Boston, USA, hvn = New Haven, USA, leu= Leuven, Belgium } 
+\caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer.} 
 \label{tab:acquisition1}
 
 \end{table}
