--- a/subsectionMaximum_Li.tex
+++ b/subsectionMaximum_Li.tex
@@ -1,2 +1,2 @@
 \subsection{Maximum Likelihood}
-Note that the estimator defined in \ref{avgest} is a maximum likelihood estimator under the condition of equal unexplained variance at each site and an equal number of subject at each site. In the case with different number of subjects at each site, the maximum likelihood estimator for the disease effect, $\hat{\beta}_{10}$, is not the average of the site-level coefficients, but instead is the average weighted by the inverse error variance. This is a common method to run meta-analyses, for example, see \cite{enigmarandom,thompson2014enigma}. To show this, we follow the procedure from \cite{enigmarandom}, and define the likelihood of the alternate hypotheses as
+Note that the estimator defined in \ref{avgest} is a maximum likelihood estimator under the condition of equal unexplained variance at each site and an equal number of subjects at each site. In the case with different number of subjects at each site, the maximum likelihood estimator for the disease effect, $\hat{\beta}_{10}$, is not the average of the site-level coefficients, but instead is the average weighted by the inverse error variance. This is a common method to run meta-analyses, for example, see \cite{enigmarandom,thompson2014enigma}. To show this, we follow the procedure from \cite{enigmarandom}, and define the likelihood of the alternate hypotheses as
