--- a/subsectionProcessing.tex
+++ b/subsectionProcessing.tex
@@ -1,2 +1,2 @@
 \subsection{Processing}
- A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer\cite{freesurferPaper} version 5.3.0 pipeline was run on each site's native T1-weighted protocol, using the RedHat 7 operating system. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation missclassified parts of the cortex. Scans from 10 sites had no exclusions, while 1-2 out of 24 scans were excluded from the remaining sites, removing at most 1-2 subjects from the analysis of that site. Freesurfer ROIs were averaged across hemispheres, and volume and area were extracted for both the cortical and subcortical ROIs, while average thickness was extracted for the cortical ROIs only. A total of 133 Freesurfer metrics were analyzed. In this study we report on gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (amyg), thalamus (thal), hippocampus (hipp), caudate (caud), and finally the estimated total intracranial volume (eTIV). The remaining subcortical  and cortical ROIs are reported in the Supplementary Materials.
+ A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer\cite{freesurferPaper} version 5.3.0 pipeline was run on each site's native T1-weighted protocol, using the RedHat 7 operating system. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation missclassified parts of the cortex. Scans from 10 sites had no exclusions, while 1-2 out of 24 scans were excluded from the remaining sites, removing at most 1-2 subjects from the analysis of that site. Freesurfer ROIs were averaged across hemispheres, and volume and area measurements were extracted for both the cortical and subcortical ROIs, while average thickness was extracted for the cortical ROIs only. A total of 133 Freesurfer metrics were analyzed. In this study we report on gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (amyg), thalamus (thal), hippocampus (hipp), caudate (caud), and finally the estimated total intracranial volume (eTIV). The remaining subcortical  and cortical ROIs are reported in the Supplementary Materials.
