--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -429,3 +429,14 @@ ABSTRACT={A robust multi-modal tool, for automated registration, bias correction
   year={2012},
   publisher={Frontiers Media SA}
 }
+
+ @Manual{psych,
+    title = {psych: Procedures for Psychological, Psychometric, and
+      Personality Research},
+    author = {William Revelle},
+    organization = { Northwestern University},
+    address = { Evanston, Illinois},
+    year = {2015},
+    note = {R package version 1.5.8},
+    url = {http://CRAN.R-project.org/package=psych},
+  }
