--- a/The_mean_disease_eff.tex
+++ b/The_mean_disease_eff.tex
@@ -1,1 +1,1 @@
-The mean disease effect estimate, $\beta_{1,j}$ is defined as the mean brain metric volume difference in the high and low groups.
+For identifiability, let \alpha_0 = 1. The mean disease effect estimate, $\beta_{1,j}$ is defined as the mean brain metric volume difference in the high and low groups.
