--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,3 @@
 %using healthy control data to help us power a study of a disease
 
-A reasonable concern for researchers planning multisite studies is that scanner and T1 weighted sequence-related biases on regional volumes could overshadow true effects, especially for studies with a heterogeneous set of scanners and sequences. While multiple phantom-based voxel-wise intensity and geometric distortion correction methods have already been developed, we propose to directly calibrate the regional volumes. We hypothesized that the bias of estimated regional volumes is scaled between sites due to the contrast and gradient distortion differences between scanners and sequences. Given this assumption, we derived a power equation to define inclusion criteria for a set of sites based on the variability of their scaling factors. We estimated the scaling factors of 20 scanners with heterogeneous sequence parameters by scanning a single set of 12 subjects at sites across the US and Europe. Regional volumes and their scaling factors were estimated for each site using Freesurfer's segmentation algorithm and ordinary least squares, respectively. The scaling factors were validated by comparing the theoretical and simulated power curves, performing a leave-one-out calibration of regional volumes, and evaluating the absolute agreement of all regional volumes between sites before and after calibration. Using our derived power equation, we were able to define the conditions under which calibration is necessary for 80\% power and to choose outcome metrics based on their scaling factor variability. For researchers planning multisite studies, these guidelines may be useful, and the ease of application enables more collaborations across clinical and research institutions.
+A reasonable concern for researchers planning multisite studies is that scanner and T1 weighted sequence-related biases on regional volumes could overshadow true effects, especially for studies with a heterogeneous set of scanners and sequences. While multiple phantom-based voxel-wise intensity and geometric distortion correction methods have already been developed, we propose to directly calibrate the regional volumes. We hypothesized that the bias of estimated regional volumes is scaled between sites due to the contrast and gradient distortion differences between scanners and sequences. Given this assumption, we derived a power equation to define inclusion criteria for a set of sites based on the variability of their scaling factors. We estimated the scaling factors of 20 scanners with heterogeneous sequence parameters by scanning a single set of 12 subjects at sites across the United States and Europe. Regional volumes and their scaling factors were estimated for each site using Freesurfer's segmentation and ordinary least squares, respectively. The scaling factors were validated by comparing the theoretical and simulated power curves, performing a leave-one-out calibration of regional volumes, and evaluating the absolute agreement of all regional volumes between sites before and after calibration. Using our derived power equation, we were able to define the conditions under which calibration is necessary for 80\% power and to choose outcome metrics based on their scaling factor variability. For researchers planning multisite studies, these guidelines may be useful, and the ease of application enables more collaborations across clinical and research institutions.
