--- a/authors.tex
+++ b/authors.tex
@@ -2,7 +2,7 @@
 Anisha Keshavan\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Friedmann Paul\footnote[2]{Charite Universitatsmedizin, Germany},
 Mona K. Beyer\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
-Alyssa Zhu\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Alyssa H. Zhu\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Nico Papinutto\footnote[1]{Neurology, UCSF, San Francisco, CA},
 William Stern\footnote[1]{Neurology, UCSF, San Francisco, CA},
 %alphabetical
