--- a/An_ANOVA_was_run.tex
+++ b/An_ANOVA_was_run.tex
@@ -1,1 +1,1 @@
-An ANOVA was run on the model to calculate an F score for $X_{Group}$. A power curve was constructed by running the simulation 5000 times, where power for a particular p-value was defined as the average number of F values greater than the critical F for a false positive rate of 0.002. The critical F was calculated with degrees of freedom of the numerator and denominator as 1 and 18 respectively. The simulated power curve was compared to the derived theoretical power curve to evaluate how scaling factor uncertainty influences power estimates. If the scaling factors calculated from the 12 subjects were not accurate, then the added residual noise from the scaling factor estimate would result in the simulated power curve deviating largely from the theoretical curve.
+An ANOVA was run on the model to calculate an F score for $X_{Group}$. A power curve was constructed by running the simulation 5000 times, where power for a particular p-value was defined as the average number of F values greater than the critical F for a false positive rate of 0.002, which allows for 25 comparisons under Bonferroni correction at $p=0.05$. The critical F was calculated with degrees of freedom of the numerator and denominator as 1 and 18 respectively. The simulated power curve was compared to the derived theoretical power curve to evaluate how scaling factor uncertainty influences power estimates. If the scaling factors calculated from the 12 subjects were not accurate, then the added residual noise from the scaling factor estimate would result in the simulated power curve deviating largely from the theoretical curve.
