--- a/Towards_this_goal_th.tex
+++ b/Towards_this_goal_th.tex
@@ -1,2 +1,2 @@
-Towards this goal, there is a large body of literature addressing the corrections of geometric distortions that result from gradient non-linearities. These corrections fall into two main categories: phantom-based deformation field estimation and direct magnetic field gradient measurement-based deformation estimation, the latter of which requires extra hardware and spherical harmonic information from the manufacturer \cite{fonov2010improved}. Calibration phantoms, such as the ADNI \cite{gunter2009measurement} and LEGO phantoms \cite{caramanos2010gradient}, have been used by large multisite studies to correct for these geometric distortions, which also affect regional volume measurements. These studies have outlined various correction methods that significantly improve deformation field similarity between scanners. However, the relationship between the severity of gradient distortion and its effect on regional volumes, in particular, remains unclear. In the case of heterogeneous acquisitions, correction becomes especially difficult due to additional noise sources. Gradient hardware differences across sites are compounded with contrast variation due to sequence parameter changes. %Variable sequence parameters result in contrast differences on top of the gradient distortion differences resulting from different gradient hardware across sites. 
+Towards this goal, there is a large body of literature addressing the corrections of geometric distortions that result from gradient non-linearities. These corrections fall into two main categories: phantom-based deformation field estimation and direct magnetic field gradient measurement-based deformation estimation, the latter of which requires extra hardware and spherical harmonic information from the manufacturer \cite{fonov2010improved}. Calibration phantoms, such as the Alzheimer's Disease Neuroimaging Initiative (ADNI) \cite{gunter2009measurement} and LEGO phantoms \cite{caramanos2010gradient}, have been used by large multisite studies to correct for these geometric distortions, which also affect regional volume measurements. These studies have outlined various correction methods that significantly improve deformation field similarity between scanners. However, the relationship between the severity of gradient distortion and its effect on regional volumes, in particular, remains unclear. In the case of heterogeneous acquisitions, correction becomes especially difficult due to additional noise sources. Gradient hardware differences across sites are compounded with contrast variation due to sequence parameter changes. %Variable sequence parameters result in contrast differences on top of the gradient distortion differences resulting from different gradient hardware across sites. 
 Rather than employing a phantom-based voxel-wise calibration scheme that corrects both contrast differences and geometric distortions, we propose to directly calibrate the regional volumes by imaging at each site a small number of common research subjects.
