--- a/Coefficients_were_se.tex
+++ b/Coefficients_were_se.tex
@@ -1,1 +1,1 @@
-Coefficients were set on the intercept as 63135 $mm^3$, $X_{Group}$ as -950 $mm^3$, covariates $Z_{Age}$ as -250 $mm^3$/year and $Z_{Gender}$ as 4600 $mm^3$. scGM volumes were generated in a linear model using these coefficients and additional noise was added from the  residuals, which were sampled from a normal distribution with zero mean and standard deviation 5030 $mm^3$. Next, the scGM volumes were scaled by each site's calculated scaling factor and gaussian noise from the residuals of the scaling factor fit were added.
+Coefficients were set on the intercept as 63.135 $cm^3$, $X_{Group}$ as -.95 $cm^3$, covariates $Z_{Age}$ as -.25 $mm^3$/year and $Z_{Gender}$ as 4.6 $cm^3$. scGM volumes were generated in a linear model using these coefficients and additional noise was added from the  residuals, which were sampled from a normal distribution with zero mean and standard deviation 5.03 $cm^3$. Next, the scGM volumes were scaled by each site's calculated scaling factor and gaussian noise from the residuals of the scaling factor fit were added.
